# Find-Sitemaps

./: .bandit  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  deploy.sh  deploy_test.sh  dev_requirements.txt  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main-updated.yaml  python-check.yaml
Find_Sitemap/: CHANGELOG.md  __init__.py  main.py  tag.py
Find_Sitemap/csv/: data.txt  sitemap.csv  top_website.csv
Find_Sitemap/src/: find_slag.py  spilt_slag.py
docs/: README.md  contributing.md
src/: main.py
tasks/: build.py  common.py  env.py  secure.py  style.py  test.py
